# immuno-watch

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  constants.py  exceptions.py  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/workflows/: ci.yml
alembic/: env.py
api/: __init__.py  dependencies.py  main.py
api/routers/: __init__.py  admin.py  alerts.py  patients.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css  theme.js
dashboard/src/api/: client.js
dashboard/src/components/: AlertFeed.jsx  PatientSidebar.jsx  RiskGauge.jsx  SensorChart.jsx  ShapCard.jsx  SimulateButton.jsx  TrendHeatmap.jsx
data/: __init__.py  database.py  schemas.py  simulator.py
inference/: __init__.py  engine.py  explainer.py
ml/: __init__.py  baseline.py  evaluation.py  export.py  federated.py  predictor.py  preprocessing.py
notebooks/: model_training.ipynb
